react-endangered-species/src/App.css
/* post MVP add hamburger to have drop down menu for mobile */
/* refer to the gucci mobile, is it possible */
/* LEARN SASS ! */
/* check out enlarge for desktop animals */


main{
  background: rgba(242, 216, 188, 1);
  padding: 15px;
}


.App {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

/* Global CSS */
h1 {
  font-size: 35px;
  font-family: 'Archivo Black', sans-serif;
  text-align: center;
}

h2, h3 {
  font-family: 'Archivo Black', sans-serif;
  text-align: center;
  margin: 0;
}


p {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 17px;
  line-height: 21px;
  letter-spacing: .4px;
}

/* makes header sticky */
.header-container {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background: white;
}

/*Header compnent */
.header {
  padding: 10px 0;
  background: rgba(128, 142, 86, 1);

}

nav {
  display: flex;
  justify-content: space-evenly;
  
}

.link-button {
  border: 2px solid black;
  border-radius: 10px;
  min-width: 100px;
  min-height: 30px;
  font-size: 13px;
  font-family: 'Roboto', sans-serif;
  font-weight: 600;
  background: rgba(35, 65, 31, 1);
  color: rgba(242, 216, 188, 1);
}

@media only screen and (min-width: 600px) {
  .link-button:hover {
    background: rgba(80, 114, 36, 1);
    transform: scale(1.2);
  }
}
/* Footer component */

.footer {
  background: rgba(191, 175, 124, 1);
  padding: 10px 0;
}

.social-links {
  display: flex;
  justify-content: space-evenly; 
  padding: 10px 0;
}

.font-icon {
  color: rgba(35, 65, 31, 1);
}

/* allow for hover for social icons at web size  */
@media only screen and (min-width: 600px) {
  .font-icon:hover {
    color: rgba(80, 114, 36, 1);
    animation: spin 2s linear infinite;
  }

  @keyframes spin {
    0% {
      transform: rotate(0deg) scale(1.2);
    }
    25% {
      transform: rotate(90deg) scale(0.8);
    }
    50% {
      transform: rotate(180deg) scale(1.2);
    }
    75% {
      transform: rotate(270deg) scale(0.8);
    }
    100% {
      transform: rotate(360deg) scale(1.2);
    }
  }
}

/* AnimalList.js */

.list-container {
  padding: 5px;
  justify-content: space-evenly;
  display: flex;
  flex-wrap: wrap;
  align-items: center
}

.link-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  transition-duration: 0.5s;
  height: 155px;
  padding: 10px;
}

/* allow for hover for animal boxes at web size */
@media only screen and (min-width: 600px) {
  .link-container:hover {
    transform: scale(1.2);
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
    border-radius: 20px;
    background: rgba(80, 114, 36, 1);
  }
}

.animal-links {
  font-family: 'Roboto', sans-serif;
  font-weight: 700;
  
}

.link-decor {
  margin: 5px;
  padding: 5px;
}

.link-img {
  max-width: 120px;
  max-height: 100px;
}

/* :link and :visited stops link from changing color and being underlined */
.link-decor:link {
  text-decoration: none;
  color: black;
}
.link-decor:visited {
  text-decoration: none;
  color: black;
}

/* Status component */

.status-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.status-boxes {
  background: rgba(128, 142, 86, 1);
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
  width: 300px;
  margin:  10px 5px;
  padding: 10px;
}

/* animal container */

.animal-img {
  max-width: 340px;
}

/* Color Theme Swatches in RGBA */
.google-earth-view-2052-1-rgba { color: rgba(35, 65, 31, 1); }
.google-earth-view-2052-2-rgba { color: rgba(80, 114, 36, 1); }
.google-earth-view-2052-3-rgba { color: rgba(128, 142, 86, 1); }
.google-earth-view-2052-4-rgba { color: rgba(191, 175, 124, 1); }
.google-earth-view-2052-5-rgba { color: rgba(242, 216, 188, 1); }

